Fix aligning

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,7 @@ body {
   left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	zoom: 3;
+	margin: 0;
 }
 
 html {
